--- a/Sample01/tsconfig.json
+++ b/Sample01/tsconfig.json
@@ -13,7 +13,6 @@
           "./*"
       ],
       "exclude": [
-          "node_modules",
-          "**/*.spec.ts"
+          "node_modules"
       ]
 }
